liquibase implementation and client services update