@@ -1,6 +1,9 @@
 package com.springpub.demo.security;
 
+import com.springpub.demo.entity.AuthInfoEntity;
+import com.springpub.demo.repository.AuthInfoRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -8,9 +11,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 
 /**
  * @author valuados
@@ -24,17 +25,17 @@ public class LoadUserDetailService implements UserDetailsService {
 
     private final Map<String, String> inMemoryUsers = new HashMap<>();
 
+    private final AuthInfoRepository authInfoRepository;
+
     @Override
     public UserDetails loadUserByUsername(final String username) throws UsernameNotFoundException{
-        final String password = inMemoryUsers.get(username);
-        if(password == null) {
-            throw new UsernameNotFoundException("User with the next email: " + username + "was not found");
-        } else{
-            return new User(username, password, Collections.emptyList());
+        final Optional<AuthInfoEntity> authInfoEntity = authInfoRepository.findByLogin(username);
+        if (authInfoEntity.isEmpty()) {
+            throw new UsernameNotFoundException("User with email: " + username + " not found");
+        } else {
+            final SimpleGrantedAuthority authority = new SimpleGrantedAuthority(
+                    "ROLE_" + authInfoEntity.get().getUser().getUserRole().name());
+            return new User(username, authInfoEntity.get().getPassword(), List.of(authority));
         }
-    }
-
-    public void saveUser(final String username, final String password){
-        inMemoryUsers.put(username, passwordEncoder.encode(password));
     }
 }
